# container

./: cookiecutter.json
{{cookiecutter.container}}/: README.md  pyproject.toml
{{cookiecutter.container}}/tests/: DemoCaseData_PeriopProc.pkl  old_test.py
{{cookiecutter.container}}/tests/unit/: test_container.py
{{cookiecutter.repo_name}}/container/: __init__.py
{{cookiecutter.repo_name}}/tests/: DemoCaseData_OORA01WGP.pkl  another_container_test.py  donttest_unpickle.py
